fix: adjust member image position on mobile

--- a/style.css
+++ b/style.css
@@ -255,6 +255,9 @@ section h2 {
     }
 
     .team-member img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         max-width: 80%;
     }
 }
